# conda-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  RELEASE.md  environment.yml  pyproject.toml  tasks.py
.github/workflows/: main.yml
conda_hooks/: env_store.py  env_update.py  environment.py  errors.py  util.py
tests/: env_store_test.py  environment_test.py  test_dummy.py  test_env_store.py  test_environment.py  test_util.py  util.py  util_test.py
tests/env_store_test/: environment.yml
tests/environment_test/: export.yml  invalid_pip_deps.yml  non_existent_env.yml  write.yml
tests/test_env_store/: environment.yml
tests/test_environment/: channels.yml  empty.yml  environment.yml  export.yml  pip_deps.yml  small.yml
tests/test_util/: empty.yml  missing_name.yml  pip_deps.yml  unsorted_deps.yml
tests/util_test/mamba_conda/: conda
