[tool.poetry]
name = "conda-hooks"
version = "0.5.0"
description = "Keep anaconda environment files up to date"
authors = ["Fabian Köhler <fabian.koehler@protonmail.ch>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/f-koehler/conda-hooks"
repository = "https://github.com/f-koehler/conda-hooks"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = ">=5.3.1,<7.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.981"
flake8 = "^5.0.2"
pyupgrade = "^2.21.2"
isort = "^5.9.2"
invoke = "^1.6.0"
pre-commit = "^2.13.0"
pytest = "^7.0.1"
black = "^22.1"
types-PyYAML = "^6.0.0"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.4"
rope = "^1.0.0"

[tool.poetry.scripts]
conda_env_store = "conda_hooks.env_store:main"

[tool.autopub]
project-name = "conda-hooks"
git-username = "f-koehler"
git-email = "fabian.koehler@protonmail.ch"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
